tests/parser/parse-do.4.bad.error
error: Malformed do expression
  --> test:4:14
   |
 4 |  (define x (do))
   |               ^ expected one or more forms
