tests/parser/parse-do.4.bad.coalton
;; BAD: Parse Do
(package test-package)

(define x (do))
